@@ -4,6 +4,7 @@ import com.bobocode.svydovets.bibernate.action.key.EntityKey;
 import com.bobocode.svydovets.bibernate.action.query.SqlQueryBuilder;
 import com.bobocode.svydovets.bibernate.constant.Operation;
 import com.bobocode.svydovets.bibernate.exception.BibernateException;
+import com.bobocode.svydovets.bibernate.exception.ConnectionException;
 import com.bobocode.svydovets.bibernate.validation.annotation.required.processor.RequiredAnnotationValidatorProcessor;
 import com.bobocode.svydovets.bibernate.validation.annotation.required.processor.RequiredAnnotationValidatorProcessorImpl;
 import java.sql.Connection;
@@ -27,10 +28,12 @@ public class DeleteAction {
         String deleteByIdQuery = sqlQueryBuilder.createDeleteByIdQuery(type);
         try (var statement = connection.prepareStatement(deleteByIdQuery)) {
             statement.setObject(1, id);
-            statement.executeUpdate();
+            if (statement.executeUpdate() != 1) {
+                throw new BibernateException(
+                        "Unable to delete entity: %s by id: %s".formatted(type.getSimpleName(), id));
+            }
         } catch (SQLException e) {
-            throw new BibernateException(
-                    String.format("Unable to delete entity: %s by id: %s:", type, id), e);
+            throw new ConnectionException("Error while executing query %s".formatted(deleteByIdQuery), e);
         }
     }
 }
